# cpp_vscode_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
data/: hwr010.bdx  hwr010.bdy  hwr010.bdz  hwr010.edx  hwr010.edy  hwr010.edz
docs/: README.md
examples/default_case/: lattice.txt
include/: map3d.h
src/: CMakeLists.txt  map3d.cpp
tests/: CMakeLists.txt  map3d_hwr010_smoke_test.cpp  map3d_synthetic_test.cpp  map3d_test_common.h
